2005-01-16  Ben Maurer  <bmaurer@ximian.com>

	* ProfileReader.cs (ReadCheckpoint, Checkpoint, GetTimelineBefore,
	GetTimeline): new functions.

	* Profile.cs (GetContextObjsForTime): new func.

	* TypeTabulator.cs: Don't load the context data. Saves shitloads
	of ram.

	* ProfileReader.cs: Update file format

	* TypeTabulator.cs: cope with changes

	* *.cs: Factor Profile out.
	
	* Profile.cs: New file.

2005-01-15  Ben Maurer  <bmaurer@ximian.com>

	* ProfileReader.cs: Update for new file format. Read HeapSize
	stuff.

	* TypeTabulator.cs: Add HeapSize type stuff.

	* TypeGraphPlotter.cs: Plot the total heap size.

2005-01-09  Ben Maurer  <bmaurer@ximian.com>

	* *: Initial Import.
